# falsification_rl

./: .gitignore  README.md  ideas.md  main.py  pyproject.toml
common/: data_structures.py
configs/: config.yaml
configs/agent/: curiosity.yaml  falsification.yaml  ppo.yaml
configs/env/: kay_corridor.yaml  key_corridor.yaml
configs/training/: default.yaml
falsify/: envs.py  models.py  storage.py
falsify/agents/: __init__.py  base_agent.py  curiosity_agent.py  falsification_agent.py
falsify/components/: __init__.py  intrinsic_modules.py  ppo_updater.py
falsify/training/: trainer.py
